tests/ui/resolve/impl-on-non-type.stderr
error[E0573]: expected type, found constant `X`
  --> $DIR/impl-on-non-type.rs:6:6
   |
LL | impl X {}
   |      ^ not a type

error[E0573]: expected type, found static `Y`
  --> $DIR/impl-on-non-type.rs:8:6
   |
LL | impl Y {}
   |      ^ not a type

error[E0573]: expected type, found function `foo`
  --> $DIR/impl-on-non-type.rs:10:6
   |
LL | impl foo {}
   |      ^^^ not a type

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0573`.
